# MyWaveOpenGLExample

./: .gitignore  CMakeLists.txt  README.md
src/: call_backs.c  call_backs.h  config.h  main.c  wave.c  wave.h
